edit footer,logo,header, fix the error of (add to watch list btn)

--- a/about.html
+++ b/about.html
@@ -5,19 +5,19 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>About Us</title>
-  <link rel="shortcut icon" href="" type="image/x-icon">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <link rel="shortcut icon" href="imgs/movie.png" type="image/x-icon">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link rel="stylesheet" href="styles.css">
   
   <script src="script.js" defer></script>
 </head>
 <body>
   <header>
-      <div class="site-left">
-        <div class="logo">🎬</div>
-        <div class="site-name">ReelTime</div>
+      
+     <div class="brand">
+        <div class="logo"><img src="imgs/movie.png" alt=""></div>
+        <span class="brand-name">ReelTime</span>
       </div>
-
       <nav class="main-nav" id="mainNav">
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -80,7 +80,7 @@
         
         <div class="story-visual">
           <div class="image-container">
-            <img src="imgs/welcome page.png" alt="ReelTime Cinema Experience" />
+            <img src="imgs/for welcome page.png" alt="ReelTime Cinema Experience" />
             <div class="image-overlay"></div>
           </div>
         </div>
@@ -179,8 +179,8 @@
   
   <div class="footer-main">
     <div class="footer-section">
-      <div class="brand">
-        <div class="logo">🎬</div>
+       <div class="brand">
+        <div class="logo"><img src="imgs/movie.png" alt=""></div>
         <span class="brand-name">ReelTime</span>
       </div>
       <p class="tagline">Where stories come to life</p>
@@ -189,21 +189,22 @@
     <div class="footer-nav">
       <div class="nav-column">
         <strong>Movies</strong>
-        <a href="#">New Releases</a>
-        <a href="#">Coming Soon</a>
-        <a href="#">Trending</a>
+        <a href="index.html">Home</a>
+        <a href="bookings.html">booking</a>
+        <a href="Profile.html">My profile</a>
+        <a href="about.html">About US</a>
       </div>
-      <div class="nav-column">
+      <!-- <div class="nav-column">
         <strong>Experience</strong>
         <a href="#">Theaters</a>
         <a href="#">Premium</a>
         <a href="#">3D</a>
-      </div>
+      </div> -->
       <div class="nav-column">
-        <strong>Company</strong>
-        <a href="about.html">About</a>
-        <a href="#">Careers</a>
-        <a href="#">Press</a>
+        <strong>Social media </strong>
+        <a href="#">instagram</a>
+        <a href="#">Facebook</a>
+        <a href="#">tiktok</a>
       </div>
     </div>
   </div>
