--- a/Profile.html
+++ b/Profile.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Watchlist</title>
-  <link rel="shortcut icon" href="" type="image/x-icon">
+ <link rel="shortcut icon" href="imgs/movie.png" type="image/x-icon">
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="profile.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -15,17 +15,17 @@
 </head>
 <body>
 <header>
-        <div class="site-left">
-      <div class="logo">🎬</div>
-      <div class="site-name">ReelTime</div>
-    </div>
-
+    
+     <div class="brand">
+        <div class="logo"><img src="imgs/movie.png" alt=""></div>
+        <span class="brand-name">ReelTime</span>
+      </div>
  <!-- lala-->
     <nav class="main-nav" id="mainNav">
       <ul>
         <li><a  href="index.html">Home</a></li>
          <li><a href="bookings.html">Bookings</a></li>
-        <li><a style="background-color: blueviolet;" href="Profile.html">Profile</a></li>
+        <li><a s href="about.html">About</a></li>
        
       </ul>
     </nav>
@@ -51,7 +51,6 @@
     <div id="watchlist-container" class="gallery"></div>
   </main>
 
-  
 <footer class="cinema-footer">
   <div class="film-strip">
     <div class="film-perfs">
@@ -65,8 +64,8 @@
   
   <div class="footer-main">
     <div class="footer-section">
-      <div class="brand">
-        <div class="logo">🎬</div>
+       <div class="brand">
+        <div class="logo"><img src="imgs/movie.png" alt=""></div>
         <span class="brand-name">ReelTime</span>
       </div>
       <p class="tagline">Where stories come to life</p>
@@ -75,21 +74,22 @@
     <div class="footer-nav">
       <div class="nav-column">
         <strong>Movies</strong>
-        <a href="#">New Releases</a>
-        <a href="#">Coming Soon</a>
-        <a href="#">Trending</a>
+        <a href="index.html">Home</a>
+        <a href="bookings.html">booking</a>
+        <a href="Profile.html">My profile</a>
+        <a href="about.html">About US</a>
       </div>
-      <div class="nav-column">
+      <!-- <div class="nav-column">
         <strong>Experience</strong>
         <a href="#">Theaters</a>
         <a href="#">Premium</a>
         <a href="#">3D</a>
-      </div>
+      </div> -->
       <div class="nav-column">
-        <strong>Company</strong>
-        <a href="about.html">About</a>
-        <a href="#">Careers</a>
-        <a href="#">Press</a>
+        <strong>Social media </strong>
+        <a href="#">instagram</a>
+        <a href="#">Facebook</a>
+        <a href="#">tiktok</a>
       </div>
     </div>
   </div>
@@ -99,8 +99,6 @@
     <p>&copy; 2024 ReelTime Cinemas</p>
   </div>
 </footer>
-
- 
   
      <!-- <script src="script.js" ></script> -->
   <!-- <script src="scriptJQ.js" defer></script> -->
