--- a/bookings.html
+++ b/bookings.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Bookings</title>
-  <link rel="shortcut icon" href="" type="image/x-icon">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"> <!-- for search icon-->
+  <link rel="shortcut icon" href="imgs/movie.png" type="image/x-icon">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"> <!-- for search icon-->
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="bookings.css">
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
@@ -16,11 +16,11 @@
 </head>
 <body>
   <header>
-      <div class="site-left">
-        <div class="logo">🎬</div>
-        <div class="site-name">ReelTime</div>
+    
+     <div class="brand">
+        <div class="logo"><img src="imgs/movie.png" alt=""></div>
+        <span class="brand-name">ReelTime</span>
       </div>
-
 
       <nav class="main-nav" id="mainNav">
         <ul>
@@ -223,6 +223,7 @@
     </div>
   </div>
  
+
 <footer class="cinema-footer">
   <div class="film-strip">
     <div class="film-perfs">
@@ -236,8 +237,8 @@
   
   <div class="footer-main">
     <div class="footer-section">
-      <div class="brand">
-        <div class="logo">🎬</div>
+       <div class="brand">
+        <div class="logo"><img src="imgs/movie.png" alt=""></div>
         <span class="brand-name">ReelTime</span>
       </div>
       <p class="tagline">Where stories come to life</p>
@@ -246,21 +247,22 @@
     <div class="footer-nav">
       <div class="nav-column">
         <strong>Movies</strong>
-        <a href="#">New Releases</a>
-        <a href="#">Coming Soon</a>
-        <a href="#">Trending</a>
+        <a href="index.html">Home</a>
+        <a href="bookings.html">booking</a>
+        <a href="Profile.html">My profile</a>
+        <a href="about.html">About US</a>
       </div>
-      <div class="nav-column">
+      <!-- <div class="nav-column">
         <strong>Experience</strong>
         <a href="#">Theaters</a>
         <a href="#">Premium</a>
         <a href="#">3D</a>
-      </div>
+      </div> -->
       <div class="nav-column">
-        <strong>Company</strong>
-        <a href="about.html">About</a>
-        <a href="#">Careers</a>
-        <a href="#">Press</a>
+        <strong>Social media </strong>
+        <a href="#">instagram</a>
+        <a href="#">Facebook</a>
+        <a href="#">tiktok</a>
       </div>
     </div>
   </div>
