--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>ReelTime - Discover, Rate & Watch</title>
-  <link rel="shortcut icon" href="" type="image/x-icon">
+  <link rel="shortcut icon" href="imgs/movie.png" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <script src="script.js" defer></script>
@@ -19,10 +19,11 @@
 
 <body>
   <header>
-    <div class="site-left">
-      <div class="logo">🎬</div>
-      <div class="site-name">ReelTime</div>
-    </div>
+    
+     <div class="brand">
+        <div class="logo"><img src="imgs/movie.png" alt=""></div>
+        <span class="brand-name">ReelTime</span>
+      </div>
 
 
     <nav class="main-nav" id="mainNav">
@@ -366,8 +367,8 @@
   
   <div class="footer-main">
     <div class="footer-section">
-      <div class="brand">
-        <div class="logo">🎬</div>
+       <div class="brand">
+        <div class="logo"><img src="imgs/movie.png" alt=""></div>
         <span class="brand-name">ReelTime</span>
       </div>
       <p class="tagline">Where stories come to life</p>
@@ -376,21 +377,22 @@
     <div class="footer-nav">
       <div class="nav-column">
         <strong>Movies</strong>
-        <a href="#">New Releases</a>
-        <a href="#">Coming Soon</a>
-        <a href="#">Trending</a>
+        <a href="index.html">Home</a>
+        <a href="bookings.html">booking</a>
+        <a href="Profile.html">My profile</a>
+        <a href="about.html">About US</a>
       </div>
-      <div class="nav-column">
+      <!-- <div class="nav-column">
         <strong>Experience</strong>
         <a href="#">Theaters</a>
         <a href="#">Premium</a>
         <a href="#">3D</a>
-      </div>
+      </div> -->
       <div class="nav-column">
-        <strong>Company</strong>
-        <a href="about.html">About</a>
-        <a href="#">Careers</a>
-        <a href="#">Press</a>
+        <strong>Social media </strong>
+        <a href="#">instagram</a>
+        <a href="#">Facebook</a>
+        <a href="#">tiktok</a>
       </div>
     </div>
   </div>
