add rating to the profile and add all the trailers  the responsivenes of profile is not thet good so check it if you can fix somehow

--- a/Profile.html
+++ b/Profile.html
@@ -47,9 +47,19 @@
     
   </div>
 
-  <main>
+<main>
     <div id="watchlist-container" class="gallery"></div>
-  </main>
+    
+    <!-- Add this Rated Movies Section -->
+    <div class="rated-section">
+        <div class="section-header">
+            <div class="section-title">My Rated Movies</div>
+            <div class="watchlist-count" id="rated-counter">0 movies rated</div>
+        </div>
+        <div class="rated-grid-modern" id="modern-rated"></div>
+    </div>
+</main>
+  
 
 <footer class="cinema-footer">
   <div class="film-strip">
