--- a/index.html
+++ b/index.html
@@ -240,12 +240,6 @@
             <figcaption>the litle stranger</figcaption>
            </figure>
 
-           <figure class="movie-card" data-title="The conjuring4"
-            data-description="The Warrens return for their most chilling case yet. When a family’s home becomes plagued by relentless paranormal forces, Ed and Lorraine must confront an evil unlike anything they’ve faced before. Dark secrets, terrifying hauntings, and a fight for survival await in this spine-tingling finale to the Conjuring saga."
-             data-trailer-id="" data-rating="4.2">
-            <img src="imgs\the conjuring4.jpg" alt="The Conjuring poster">
-            <figcaption>The Conjuring 4</figcaption>
-           </figure>
 
            <figure class="movie-card" data-title="Black Phone2"
             data-description="True evil transcends death and the black phone rings again as The Grabber torments Finn, the teen who killed him, from beyond the grave by menacing his sister Gwen. Haunted by horrific visions, the teens set out to stop their psychological torture only to uncover a disturbing secret as they confront a killer who has grown more powerful in death."
@@ -403,7 +397,7 @@
   </div>
 </footer>
 
-<div id="toast" class="toast"></div>
+<!-- <div id="toast" class="toast"></div> -->
   <script src="script.js" defer></script>
   <script src="scriptJQ.js"></script>
   <script>
