Added Json changed multiple stuff

--- a/bookings.html
+++ b/bookings.html
@@ -139,7 +139,7 @@
         </div>
   </div>
   <div class="box2">
-    <section class="gallery" id="gallery">
+    <section class="gallery2" id="gallery2">
       <div class="movie" id="movie">
           <figure class="movie-card" data-title="The Running Man"
             data-description="In a near-future society, The Running Man is the top-rated show on television—a deadly competition where contestants, known as Runners, must survive 30 days while being hunted by professional assassins, with every move broadcast to a bloodthirsty public and each day bringing a greater cash reward."
