--- a/Profile.html
+++ b/Profile.html
@@ -27,7 +27,8 @@
     <nav class="main-nav" id="mainNav">
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="bookings.html">Bookings</a></li>   
+        <li><a href="bookings.html">Bookings</a></li> 
+         <li><a href="trivia.html">Games</a></li>  
         <li><a href="about.html">About</a></li>
       </ul>
     </nav>
