--- a/about.html
+++ b/about.html
@@ -21,7 +21,8 @@
       <nav class="main-nav" id="mainNav">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="bookings.html">Bookings</a></li>   
+          <li><a href="bookings.html">Bookings</a></li>
+           <li><a href="trivia.html">Games</a></li>   
           <li><a href="about.html" style="background-color: blueviolet;">About</a></li>
         </ul>
       </nav>
