--- a/bookings.html
+++ b/bookings.html
@@ -25,7 +25,8 @@
       <nav class="main-nav" id="mainNav">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="bookings.html" style="background-color: blueviolet;">Bookings</a></li>   
+          <li><a href="bookings.html" style="background-color: blueviolet;">Bookings</a></li> 
+           <li><a href="trivia.html">Games</a></li>  
           <li><a href="about.html">About</a></li>
         </ul>
       </nav>
