--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     <nav class="main-nav" id="mainNav">
       <ul>
         <li><a style="background-color: blueviolet;" href="index.html">Home</a></li>
-        <li><a href="bookings.html">Bookings</a></li>   
+        <li><a href="bookings.html">Bookings</a></li> 
+         <li><a href="trivia.html">Games</a></li>  
         <li><a href="about.html">About</a></li>
       </ul>
     </nav>
