header-search osas

--- a/bookings.html
+++ b/bookings.html
@@ -51,6 +51,9 @@
       </div>
 
     </header>
+<div id="searchOverlay" class="search-overlay">
+  <div class="search-results"></div>
+</div>
 <main>
   <div class="box1">
     <div class="booking">
