fixed repsonse, fixed bookings(check what is commented), added a select for booking, added movies, added cast, genres...

--- a/index.html
+++ b/index.html
@@ -120,6 +120,11 @@
             allowfullscreen>
           </iframe>
         </div>
+        <div id="movieinfo">
+          <p><strong>Cast:</strong> <span id="modal-cast"></span></p>
+          <p><strong>Genres:</strong> <span id="modal-genres"></span></p>
+          <p><strong>This movie is:</strong> <span id="modal-this-movie-is"></span></p>
+        </div>
       </div>
 
       <div class="modal__body">
