--- a/pages/trivia.html
+++ b/pages/trivia.html
@@ -5,25 +5,25 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Movie Games - ReelTime</title>
-  <link rel="shortcut icon" href="imgs/movie.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../imgs/movie.png" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-  <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="trivia.css">
+  <link rel="stylesheet" href="../css/styles.css">
+  <link rel="stylesheet" href="../css/trivia.css">
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 </head>
 <body>
   <header>
     <div class="brand">
-      <div class="logo"><img src="imgs/movie.png" alt=""></div>
+      <div class="logo"><img src="../imgs/movie.png" alt=""></div>
       <span class="brand-name">ReelTime</span>
     </div>
 
     <nav class="main-nav" id="mainNav">
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="bookings.html">Bookings</a></li>   
-        <li><a href="trivia.html" style="background-color: blueviolet;">Games</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../pages/bookings.html">Bookings</a></li>   
+        <li><a href="../pages/trivia.html" style="background-color: blueviolet;">Games</a></li>
+        <li><a href="../pages/about.html">About</a></li>
       </ul>
     </nav>
 
@@ -40,7 +40,7 @@
       </button>
     </div>
     <div class="profile-icon">
-      <a href="profile.html"><i class="fa-solid fa-circle-user"></i></a>
+      <a href="../pages/Profile.html"><i class="fa-solid fa-circle-user"></i></a>
     </div>
   </header>
 
@@ -56,7 +56,7 @@
         <div class="empty-icon">🎮</div>
         <h3>Please Log In</h3>
         <p>You need to be logged in to play movie games and track your scores.</p>
-        <a href="index.html" style="color: #8a2be2; text-decoration: none; font-weight: bold;">Go to Login →</a>
+        <a href="../index.html" style="color: #8a2be2; text-decoration: none; font-weight: bold;">Go to Login →</a>
       </div>
     </div>
 
@@ -130,7 +130,7 @@
     <div class="footer-main">
       <div class="footer-section">
         <div class="brand">
-          <div class="logo"><img src="imgs/movie.png" alt=""></div>
+          <div class="logo"><img src="../imgs/movie.png" alt=""></div>
           <span class="brand-name">ReelTime</span>
         </div>
         <p class="tagline">Where stories come to life</p>
@@ -139,10 +139,10 @@
       <div class="footer-nav">
         <div class="nav-column">
           <strong>Movies</strong>
-          <a href="index.html">Home</a>
-          <a href="bookings.html">booking</a>
-          <a href="Profile.html">My profile</a>
-          <a href="about.html">About US</a>
+          <a href="../index.html">Home</a>
+          <a href="../pages/bookings.html">booking</a>
+          <a href="../pages/Profile.html">My profile</a>
+          <a href="../pages/about.html">About US</a>
         </div>
         <div class="nav-column">
           <strong>Social media </strong>
@@ -159,7 +159,7 @@
     </div>
   </footer>
 
-  <script src="script.js"></script>
-  <script src="trivia.js"></script>
+  <script src="../js/script.js"></script>
+  <script src="../js/trivia.js"></script>
 </body>
 </html>
