--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>ReelTime - Discover, Rate & Watch</title>
-  <link rel="shortcut icon" href="imgs/movie.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../imgs/movie.png" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-  <script src="script.js" defer></script>
-  <script src="scriptJQ.js" defer></script>
- <script src="watchlist.js" defer></script>
+  <script src="../js/script.js" defer></script>
+  <script src="../js/scriptJQ.js" defer></script>
+ <script src="../js/watchlist.js" defer></script>
   <!-- for search icon-->
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="../css/styles.css">
 
 </head>
 
@@ -21,7 +21,7 @@
   <header>
     
      <div class="brand">
-        <div class="logo"><img src="imgs/movie.png" alt=""></div>
+        <div class="logo"><img src="../imgs/movie.png" alt=""></div>
         <span class="brand-name">ReelTime</span>
       </div>
 
@@ -29,9 +29,9 @@
     <nav class="main-nav" id="mainNav">
       <ul>
         <li><a style="background-color: blueviolet;" href="index.html">Home</a></li>
-        <li><a href="bookings.html">Bookings</a></li> 
-         <li><a href="trivia.html">Games</a></li>  
-        <li><a href="about.html">About</a></li>
+        <li><a href="../pages/bookings.html">Bookings</a></li> 
+         <li><a href="../pages/trivia.html">Games</a></li>  
+        <li><a href="../pages/about.html">About</a></li>
       </ul>
     </nav>
 
@@ -51,7 +51,7 @@
       </button>
     </div>
     <div class="profile-icon">
-      <a href="profile.html"><i class="fa-solid fa-circle-user"></i></a>
+      <a href="../pages/Profile.html"><i class="fa-solid fa-circle-user"></i></a>
     </div>
 
   </header>
@@ -101,7 +101,7 @@
       <div class="Welcome2">
         <p style="font-style: italic;">YOUR MOVIES IN ONE PLACE</p>
         <h1>Welcome to ReelTime</h1>
-        <a href="about.html">Learn More</a>
+        <a href="../pages/about.html">Learn More</a>
       </div>
     </div>
 
@@ -154,7 +154,7 @@
   <div class="footer-main">
     <div class="footer-section">
        <div class="brand">
-        <div class="logo"><img src="imgs/movie.png" alt=""></div>
+        <div class="logo"><img src="../imgs/movie.png" alt=""></div>
         <span class="brand-name">ReelTime</span>
       </div>
       <p class="tagline">Where stories come to life</p>
@@ -163,10 +163,10 @@
     <div class="footer-nav">
       <div class="nav-column">
         <strong>Movies</strong>
-        <a href="index.html">Home</a>
-        <a href="bookings.html">booking</a>
-        <a href="Profile.html">My profile</a>
-        <a href="about.html">About US</a>
+        <a href="../index.html">Home</a>
+        <a href="../pages/bookings.html">booking</a>
+        <a href="../pages/Profile.html">My profile</a>
+        <a href="../pages/about.html">About US</a>
       </div>
       <!-- <div class="nav-column">
         <strong>Experience</strong>
@@ -190,8 +190,8 @@
 </footer>
 
 <!-- <div id="toast" class="toast"></div> -->
-  <script src="script.js" defer></script>
-  <script src="scriptJQ.js"></script>
+  <script src="../js/script.js" defer></script>
+  <script src="../js/scriptJQ.js"></script>
   <script>
 document.querySelectorAll(".movie-card").forEach(card => {
     let rating = card.dataset.rating || "N/A";
