--- a/pages/Profile.html
+++ b/pages/Profile.html
@@ -5,31 +5,31 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Watchlist</title>
-  <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="profile.css">
+  <link rel="stylesheet" href="../css/styles.css">
+  <link rel="stylesheet" href="../css/profile.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-  <link rel="shortcut icon" href="imgs/movie.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../imgs/movie.png" type="image/x-icon">
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="moviesData.js"></script>
-  <script src="profile.js" defer></script>
-  <script src="watchlist.js" defer></script>
+  <script src="../js/moviesData.js"></script>
+  <script src="../js/profile.js" defer></script>
+  <script src="../js/watchlist.js" defer></script>
 </head>
 <body>
  <header>
     
      <div class="brand">
-        <div class="logo"><img src="imgs/movie.png" alt=""></div>
+        <div class="logo"><img src="../imgs/movie.png" alt=""></div>
         <span class="brand-name">ReelTime</span>
       </div>
 
 
     <nav class="main-nav" id="mainNav">
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="bookings.html">Bookings</a></li> 
-         <li><a href="trivia.html">Games</a></li>  
-        <li><a href="about.html">About</a></li>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../pages/bookings.html">Bookings</a></li> 
+         <li><a href="../pages/trivia.html">Games</a></li>  
+        <li><a href="../pages/about.html">About</a></li>
       </ul>
     </nav>
 
@@ -49,7 +49,7 @@
       </button>
     </div>
     <div class="profile-icon">
-      <a style="color: #895bf5; " href="profile.html"><i class="fa-solid fa-circle-user"></i></a>
+      <a style="color: #895bf5; " href="../pages/Profile.html"><i class="fa-solid fa-circle-user"></i></a>
     </div>
 
   </header>
@@ -96,7 +96,7 @@
   <div class="footer-main">
     <div class="footer-section">
        <div class="brand">
-        <div class="logo"><img src="imgs/movie.png" alt=""></div>
+        <div class="logo"><img src="../imgs/movie.png" alt=""></div>
         <span class="brand-name">ReelTime</span>
       </div>
       <p class="tagline">Where stories come to life</p>
@@ -105,10 +105,10 @@
     <div class="footer-nav">
       <div class="nav-column">
         <strong>Movies</strong>
-        <a href="index.html">Home</a>
-        <a href="bookings.html">booking</a>
-        <a href="Profile.html">My profile</a>
-        <a href="about.html">About US</a>
+        <a href="../index.html">Home</a>
+        <a href="../pages/bookings.html">booking</a>
+        <a href="../pages/Profile.html">My profile</a>
+        <a href="../pages/about.html">About US</a>
       </div>
       <!-- <div class="nav-column">
         <strong>Experience</strong>
