--- a/pages/bookings.html
+++ b/pages/bookings.html
@@ -5,29 +5,29 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Bookings</title>
-  <link rel="shortcut icon" href="imgs/movie.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../imgs/movie.png" type="image/x-icon">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"> <!-- for search icon-->
-  <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="bookings.css">
+  <link rel="stylesheet" href="../css/styles.css">
+  <link rel="stylesheet" href="../css/bookings.css">
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-  <script src="script.js" defer></script>
-  <script src="scriptJQ.js" defer></script>
+  <script src="../js/script.js" defer></script>
+  <script src="../js/scriptJQ.js" defer></script>
 
 </head>
 <body>
   <header>
     
      <div class="brand">
-        <div class="logo"><img src="imgs/movie.png" alt=""></div>
+        <div class="logo"><img src="../imgs/movie.png" alt=""></div>
         <span class="brand-name">ReelTime</span>
       </div>
 
       <nav class="main-nav" id="mainNav">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="bookings.html" style="background-color: blueviolet;">Bookings</a></li> 
-           <li><a href="trivia.html">Games</a></li>  
-          <li><a href="about.html">About</a></li>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="../pages/bookings.html" style="background-color: blueviolet;">Bookings</a></li> 
+           <li><a href="../pages/trivia.html">Games</a></li>  
+          <li><a href="../pages/about.html">About</a></li>
         </ul>
       </nav>
 
@@ -47,7 +47,7 @@
         </button>
       </div>
       <div class="profile-icon">
-        <a href="profile.html"><i class="fa-solid fa-circle-user"></i></a>
+        <a href="../pages/Profile.html"><i class="fa-solid fa-circle-user"></i></a>
       </div>
 
     </header>
@@ -178,7 +178,7 @@
           <figure class="movie-card" data-title="The Running Man"
             data-description="In a near-future society, The Running Man is the top-rated show on television—a deadly competition where contestants, known as Runners, must survive 30 days while being hunted by professional assassins, with every move broadcast to a bloodthirsty public and each day bringing a greater cash reward."
             data-trailer-id="YOUR_TRAILER_ID_4">
-            <img src="imgs/therunningman.jpg" alt="The Running Man poster">
+            <img src="../imgs/therunningman.jpg" alt="The Running Man poster">
             <figcaption>The Running Man</figcaption>
             <div class="showtimes">1:00 • 3:00 • 6:00 • 9:00</div>
             </figure>
@@ -187,7 +187,7 @@
           <figure class="movie-card" data-title="Predator:Badlands"
             data-description="A young Predator outcast from his clan finds an unlikely ally on his journey in search of the ultimate adversary."
             data-trailer-id="YOUR_TRAILER_ID_4">
-            <img src="imgs/predator badlands.jpg" alt="Predator: Badlands poster">
+            <img src="../imgs/predator badlands.jpg" alt="Predator: Badlands poster">
             <figcaption>Predator: Badlands</figcaption>
             <div class="showtimes">1:00 • 3:00 • 6:00 • 9:00</div>
            </figure>
@@ -197,7 +197,7 @@
           <figure class="movie-card" data-title="HardaBasht"
             data-description="A mother and her 3 boys live in the poor suburbs of Beirut. The youngest boy is religiously committed unlike his two older brothers who are drug dealers. They force their younger brother to work for them because of his clean reputation. A series of events bring chaos to the family and the whole neighborhood."
             data-trailer-id="YOUR_TRAILER_ID_4">
-            <img src="imgs/hardabsht.jpg" alt="HardaBasht poster">
+            <img src="../imgs/hardabsht.jpg" alt="HardaBasht poster">
             <figcaption>HardaBasht</figcaption>
             <div class="showtimes">1:00 • 3:00 • 6:00 • 9:00</div>
              </figure>
@@ -207,7 +207,7 @@
           <figure class="movie-card" data-title="Jujutsu Kaisen:Execution"
             data-description="A veil abruptly descends over the busy Shibuya area amid the bustling Halloween crowds, trapping countless civilians inside. Satoru Gojo, the strongest jujutsu sorcerer, steps into the chaos. But lying in wait are curse users and spirits scheming to seal him away. Yuji Itadori, accompanied by his classmates and other top-tier jujutsu sorcerers, enters the fray in an unprecedented clash of curses — the Shibuya Incident. In the aftermath, ten colonies across Japan are transformed into dens of curses in a plan orchestrated by Noritoshi Kamo, the most wicked sorcerer in history. As the deadly Culling Game starts, Special Grade sorcerer Yuta Okkotsu is assigned to carry out Yuji’s execution for his perceived crimes. The desperate confrontation between Satoru Gojo’s two beloved students comes to the big screen with an early preview. Be the first to experience Yuji and Yuta’s fateful battle with the hotly anticipated kickoff to Season 3 in theatres nationwide."
             data-trailer-id="YOUR_TRAILER_ID_5">
-            <img src="imgs/jujutsu kaisen.jpg" alt="Jujutsu Kaisen:Execution poster">
+            <img src="../imgs/jujutsu kaisen.jpg" alt="Jujutsu Kaisen:Execution poster">
             <figcaption>Jujutsu Kaisen:Execution</figcaption>
             <div class="showtimes">1:00 • 3:00 • 6:00 • 9:00</div>
              </figure>
@@ -217,7 +217,7 @@
           <figure class="movie-card" data-title="Playdate"
             data-description="After being fired from his job, BRIAN, instantly becomes a reluctant stay-at-home dad to his step son. On his very first day, Brian accepts a random invitation for a playdate from another stay-at-home dad, JEFF. Jeff definitely seems a little bit…off. And as the playdate begins, Jeff turns out to be someone Brian never expected and they immediately have to go on the run from a very dangerous situation. It’s a playdate from hell as the two fathers and their sons spend the day trying not to get killed and solve a conspiracy."
             data-trailer-id="YOUR_TRAILER_ID_6">
-            <img src="imgs/playdate.jpg" alt="Playdate poster">
+            <img src="../imgs/playdate.jpg" alt="Playdate poster">
             <figcaption>Playdate</figcaption>
             <div class="showtimes">1:00 • 3:00 • 6:00 • 9:00</div>
             </figure>
@@ -226,7 +226,7 @@
           <figure class="movie-card" data-title="El Selem W El Thoban"
             data-description="In Snake and Ladder, love and ambition intertwine as Ahmed (Amr Youssef), a creative architect, and Malak (Asmaa Galal), a driven entrepreneur, struggle to reconcile who they’ve become with who they were together. When distance and new relationships—like Malak’s rekindled connection with Amir (Dhafer L’Abidine)—test their bond, both are forced to confront lost versions of themselves and the choices that shaped their paths."
             data-trailer-id="GRm2_FzP1m0">
-            <img src="imgs/El Selem W El Thoban.jpg" alt="El Selem W El Thoban">
+            <img src="../imgs/El Selem W El Thoban.jpg" alt="El Selem W El Thoban">
             <figcaption>El Selem W El Thoban</figcaption>
             <div class="showtimes">1:00 • 3:00 • 6:00 • 9:00</div>
           </figure>
@@ -272,7 +272,7 @@
   <div class="footer-main">
     <div class="footer-section">
        <div class="brand">
-        <div class="logo"><img src="imgs/movie.png" alt=""></div>
+        <div class="logo"><img src="../imgs/movie.png" alt=""></div>
         <span class="brand-name">ReelTime</span>
       </div>
       <p class="tagline">Where stories come to life</p>
@@ -281,10 +281,10 @@
     <div class="footer-nav">
       <div class="nav-column">
         <strong>Movies</strong>
-        <a href="index.html">Home</a>
-        <a href="bookings.html">booking</a>
-        <a href="Profile.html">My profile</a>
-        <a href="about.html">About US</a>
+        <a href="../index.html">Home</a>
+        <a href="../pages/bookings.html">booking</a>
+        <a href="../pages/Profile.html">My profile</a>
+        <a href="../pages/about.html">About US</a>
       </div>
       <!-- <div class="nav-column">
         <strong>Experience</strong>
