--- a/pages/Profile.html
+++ b/pages/Profile.html
@@ -14,6 +14,9 @@
   <script src="../js/moviesData.js"></script>
   <script src="../js/profile.js" defer></script>
   <script src="../js/watchlist.js" defer></script>
+  <script src="../js/script.js" defer></script>
+  <script src="../js/scriptJQ.js" defer></script>
+
 </head>
 <body>
  <header>
