--- a/pages/trivia.html
+++ b/pages/trivia.html
@@ -10,6 +10,9 @@
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="../css/trivia.css">
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  <script src="../js/script.js" defer></script>
+  <script src="../js/scriptJQ.js" defer></script>
+
 </head>
 <body>
   <header>
