select works again, styling a little

--- a/pages/Profile.html
+++ b/pages/Profile.html
@@ -10,8 +10,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link rel="shortcut icon" href="../imgs/movie.png" type="image/x-icon">
 
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="../js/moviesData.js" ></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="../js/profile.js" defer></script>
   <script src="../js/watchlist.js" defer></script>
   <script src="../js/script.js" defer></script>
@@ -79,7 +78,7 @@
         <div class="section-title">My Booked Movies</div>
         <div class="watchlist-count" id="booked-counter">0 bookings</div>
       </div>
-      <div class="booked" id="booked"></div>
+      <div class="booked-grid-modern" id="booked-grid"></div>
     </div>
 
 </main>
