--- a/pages/trivia.html
+++ b/pages/trivia.html
@@ -38,7 +38,7 @@
     </div>
 
     <div class="search">
-      <input id="SearchInput" placeholder="Search movies, actors, genres..." />
+      <input id="SearchInput" placeholder="Search games" />
       <button class="search-icon" id="searchToggle">
         <i class="fa fa-search" aria-hidden="true"></i>
       </button>
