search page, css stuff fixed, profile repsoniveness scroll, search adds to watchlist with a heart, images are now png and lower res

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>ReelTime - Discover, Rate & Watch</title>
-  <link rel="shortcut icon" href="../imgs/movie.png" type="image/x-icon">
+  <link rel="shortcut icon" href="imgs/movie.png" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-  <script src="../js/script.js" defer></script>
-  <script src="../js/scriptJQ.js" defer></script>
- <script src="../js/watchlist.js" defer></script>
+  <script src="js/script.js" defer></script>
+  <script src="js/scriptJQ.js" defer></script>
+ <script src="js/watchlist.js" defer></script>
   <!-- for search icon-->
-  <link rel="stylesheet" href="../css/styles.css">
+  <link rel="stylesheet" href="css/styles.css">
 
 </head>
 
@@ -21,7 +21,7 @@
   <header>
     
      <div class="brand">
-        <div class="logo"><img src="../imgs/movie.png" alt=""></div>
+        <div class="logo"><img src="imgs/movie.png" alt=""></div>
         <span class="brand-name">ReelTime</span>
       </div>
 
@@ -29,9 +29,9 @@
     <nav class="main-nav" id="mainNav">
       <ul>
         <li><a style="background-color: blueviolet;" href="index.html">Home</a></li>
-        <li><a href="../pages/bookings.html">Bookings</a></li> 
-         <li><a href="../pages/trivia.html">Games</a></li>  
-        <li><a href="../pages/about.html">About</a></li>
+        <li><a href="pages/bookings.html">Bookings</a></li> 
+         <li><a href="pages/trivia.html">Games</a></li>  
+        <li><a href="pages/about.html">About</a></li>
       </ul>
     </nav>
 
@@ -44,14 +44,13 @@
 
 
     <div class="search">
-      <input id="SearchInput" placeholder="Search movies, actors, genres..." />
-      <button class="search-icon" id="searchToggle">
-        <i class="fa fa-search" aria-hidden="true"></i>
-
-      </button>
+      <!-- <input id="SearchInput" placeholder="Search movies, actors, genres..." /> -->
+      <a href="pages/search.html" class="search-icon" id="searchToggle">
+          <i class="fa-solid fa-magnifying-glass" aria-hidden="true"></i>
+      </a>
     </div>
     <div class="profile-icon">
-      <a href="../pages/Profile.html"><i class="fa-solid fa-circle-user"></i></a>
+      <a href="pages/Profile.html"><i class="fa-solid fa-circle-user"></i></a>
     </div>
 
   </header>
@@ -101,7 +100,7 @@
       <div class="Welcome2">
         <p style="font-style: italic;">YOUR MOVIES IN ONE PLACE</p>
         <h1>Welcome to ReelTime</h1>
-        <a href="../pages/about.html">Learn More</a>
+        <a href="pages/about.html">Learn More</a>
       </div>
     </div>
 
@@ -154,7 +153,7 @@
   <div class="footer-main">
     <div class="footer-section">
        <div class="brand">
-        <div class="logo"><img src="../imgs/movie.png" alt=""></div>
+        <div class="logo"><img src="imgs/movie.png" alt=""></div>
         <span class="brand-name">ReelTime</span>
       </div>
       <p class="tagline">Where stories come to life</p>
@@ -163,10 +162,10 @@
     <div class="footer-nav">
       <div class="nav-column">
         <strong>Movies</strong>
-        <a href="../index.html">Home</a>
-        <a href="../pages/bookings.html">booking</a>
-        <a href="../pages/Profile.html">My profile</a>
-        <a href="../pages/about.html">About US</a>
+        <a href="index.html">Home</a>
+        <a href="pages/bookings.html">booking</a>
+        <a href="pages/Profile.html">My profile</a>
+        <a href="pages/about.html">About US</a>
       </div>
       <!-- <div class="nav-column">
         <strong>Experience</strong>
