--- a/pages/bookings.html
+++ b/pages/bookings.html
@@ -41,10 +41,10 @@
 
 
       <div class="search">
-        <input id="SearchInput" placeholder="Search movies, actors, genres..." />
-        <button class="search-icon" id="searchToggle">
-          <i class="fa fa-search" aria-hidden="true"></i>
-
+      <!-- <input id="SearchInput" placeholder="Search movies, actors, genres..." /> -->
+      <a href="../pages/search.html" class="search-icon" id="searchToggle">
+              <i class="fa-solid fa-magnifying-glass" aria-hidden="true"></i>
+      </a>
         </button>
       </div>
       <div class="profile-icon">
@@ -183,7 +183,7 @@
             data-genres="Action, Sci-Fi, Thriller"
             data-this-movie-is="Intense, Violent, Futuristic"
             data-rating="4.3">
-            <img src="../imgs/therunningman.jpg" alt="The Running Man">
+            <img src="../imgs/therunningman-min.png" alt="The Running Man">
             <figcaption>The Running Man</figcaption>
             <div class="showtimes">1:00pm • 3:00pm • 6:00pm • 9:00pm</div>
             </figure>
@@ -196,7 +196,7 @@
             data-genres="Action, Sci-Fi, Horror"
             data-this-movie-is="Gory, Suspenseful, Alien Hunt"
             data-rating="3.3">
-            <img src="../imgs/predator badlands.jpg" alt="Predator: Badlands">
+            <img src="../imgs/predator badlands-min.png" alt="Predator: Badlands">
             <figcaption>Predator: Badlands</figcaption>
             <div class="showtimes">1:00pm • 3:00pm • 6:00pm • 9:00pm</div>
            </figure>
@@ -210,7 +210,7 @@
             data-genres="Drama, Family, Crime"
             data-this-movie-is="Emotional, Lebanese, Gritty"
             data-rating="4.1">
-            <img src="../imgs/hardabsht.jpg" alt="HardaBasht poster">
+            <img src="../imgs/hardabsht-min.png" alt="HardaBasht poster">
             <figcaption>HardaBasht</figcaption>
             <div class="showtimes">1:00pm • 3:00pm • 6:00pm • 9:00pm</div>
              </figure>
@@ -224,7 +224,7 @@
             data-genres="Action, Fantasy, Anime"
             data-this-movie-is="Exciting, Supernatural, Intense"
             data-rating="4.7">
-            <img src="../imgs/jujutsu kaisen.jpg" alt="Jujutsu Kaisen:Execution poster">
+            <img src="../imgs/jujutsu kaisen-min.png" alt="Jujutsu Kaisen:Execution poster">
             <figcaption>Jujutsu Kaisen:Execution</figcaption>
             <div class="showtimes">1:00pm • 3:00pm • 6:00pm • 9:00pm</div>
              </figure>
@@ -238,7 +238,7 @@
             data-genres="Comedy, Action, Thriller"
             data-this-movie-is="Funny, Suspenseful, Action-Packed"
             data-rating="4.2">
-            <img src="../imgs/playdate.jpg" alt="Playdate poster">
+            <img src="../imgs/playdate-min.png" alt="Playdate poster">
             <figcaption>Playdate</figcaption>
             <div class="showtimes">1:00pm • 3:00pm • 6:00pm • 9:00pm</div>
             </figure>
@@ -251,7 +251,7 @@
             data-genres="Romance, Drama"
             data-this-movie-is="Emotional, Romantic, Thought-Provoking"
             data-rating="2.3">
-            <img src="../imgs/El Selem W El Thoban.jpg" alt="El Selem W El Thoban">
+            <img src="../imgs/El Selem W El Thoban-min.png" alt="El Selem W El Thoban">
             <figcaption>El Selem W El Thoban</figcaption>
             <div class="showtimes">1:00pm • 3:00pm • 6:00pm • 9:00pm</div>
           </figure>
