--- a/pages/trivia.html
+++ b/pages/trivia.html
@@ -38,10 +38,10 @@
     </div>
 
     <div class="search">
-      <input id="SearchInput" placeholder="Search games" />
-      <button class="search-icon" id="searchToggle">
-        <i class="fa fa-search" aria-hidden="true"></i>
-      </button>
+      <!-- <input id="SearchInput" placeholder="Search movies, actors, genres..." /> -->
+      <a href="../pages/search.html" class="search-icon" id="searchToggle">
+          <i class="fa-solid fa-magnifying-glass" aria-hidden="true"></i>
+      </a>
     </div>
     <div class="profile-icon">
       <a href="../pages/Profile.html"><i class="fa-solid fa-circle-user"></i></a>
@@ -50,7 +50,7 @@
 
   <main class="trivia-main">
     <div class="games-hero">
-      <h1>🎬 Movie Games & Trivia</h1>
+      <h1>Movie Games & Trivia</h1>
       <p>Test your movie knowledge and have fun!</p>
     </div>
 
@@ -102,7 +102,7 @@
 
       <!-- Leaderboard Section -->
       <div class="leaderboard-section">
-        <h2>🏆 Top Players</h2>
+        <h2>Top Players</h2>
         <div class="leaderboard" id="leaderboard">
           <!-- Dynamic content from JS -->
         </div>
