--- a/pages/Profile.html
+++ b/pages/Profile.html
@@ -44,11 +44,10 @@
 
 
     <div class="search">
-      <input id="SearchInput" placeholder="Search movies, actors, genres..." />
-      <button class="search-icon" id="searchToggle">
-        <i class="fa fa-search" aria-hidden="true"></i>
-
-      </button>
+      <!-- <input id="SearchInput" placeholder="Search movies, actors, genres..." /> -->
+      <a href="../pages/search.html" class="search-icon" id="searchToggle">
+      <i class="fa-solid fa-magnifying-glass" aria-hidden="true"></i>
+      </a>
     </div>
     <div class="profile-icon">
       <a style="color: #895bf5; " href="../pages/Profile.html"><i class="fa-solid fa-circle-user"></i></a>
