--- a/pages/about.html
+++ b/pages/about.html
@@ -33,10 +33,10 @@
     </div>
 
     <div class="search">
-      <input id="SearchInput" placeholder="Search movies, actors, genres..." />
-      <button class="search-icon" id="searchToggle">
-        <i class="fa fa-search" aria-hidden="true"></i>
-      </button>
+      <!-- <input id="SearchInput" placeholder="Search movies, actors, genres..." /> -->
+      <a href="../pages/search.html" class="search-icon" id="searchToggle">
+          <i class="fa-solid fa-magnifying-glass" aria-hidden="true"></i>
+      </a>
     </div>
     <div class="profile-icon">
       <a href="../pages/Profile.html"><i class="fa-solid fa-circle-user"></i></a>
