removed title names, overlay on all movies with title desc + rating, fixed booking email and phone should be numeric, fixed about hero box.... check it out

--- a/index.html
+++ b/index.html
@@ -87,9 +87,6 @@
 </div>
 </div>
 
-    <div id="searchOverlay" class="search-overlay">
-      <div class="search-results"></div>
-    </div>
 
 
 
@@ -193,9 +190,11 @@
   <script>
 document.querySelectorAll(".movie-card").forEach(card => {
     let rating = card.dataset.rating || "N/A";
-
+    let description = card.dataset.description || "N/A"
+    console.log(description);
     let overlay = document.createElement("span");
     overlay.className = "rating-overlay";
+    overlay.textContent = `${description} `;
     overlay.textContent = `${rating} / 5 ★`;
 
     card.appendChild(overlay);
