--- a/pages/bookings.html
+++ b/pages/bookings.html
@@ -100,7 +100,7 @@
                 <option value="SpotChoueifat">The Spot Choueifat</option>
                 <option value="SpotSaida">The Spot Saida</option>
             </select>
-            <button class="next" onclick="completeStep()">Submit Step 1</button>
+            <button class="next" onclick="completeStep()">Submit</button>
         </div>
          <div class="step-content" id="step2">
             <select name="" id="movieselect" class="selectoptions">
@@ -111,7 +111,7 @@
                 <option value="Playdate">Playdate</option>
                 <option value="ElSelemWElThoban">El Selem W El Thoban</option>
             </select>
-            <button class="next" onclick="completeStep()">Submit Step 2</button>
+            <button class="next" onclick="completeStep()">Submit</button>
         </div>
         <div class="step-content" id="step3">
             <input type="date" id="dateselect" class="selectoptions">
@@ -121,7 +121,7 @@
                 <option value="6:00">6:00 pm</option>
                 <option value="9:00">9:00 pm</option>
             </select>
-            <button class="next" onclick="completeStep()">Submit Step 3</button>          
+            <button class="next" onclick="completeStep()">Submit</button>          
         </div>
         <div class="step-content" id="step4">
             <div class="container">
@@ -163,9 +163,9 @@
             <button class="next" id="reserveBtn" disabled onclick="completeStep()">Reserve</button>          
         </div>
         <div class="step-content" id="step5">
-            <input type="text" id="Name" placeholder="Enter Full Name">
-            <input type="text" id="Email" placeholder="Enter Email">
-            <input type="text" id="PhoneNumber" placeholder="Enter Phone Number">
+            <input type="text" id="Name" placeholder="Enter your Full Name">
+            <input type="text" id="Email" placeholder="Enter your Email">
+            <input type="text" id="PhoneNumber" placeholder="Enter your Phone Number">
             <input type="text" id="CardNumber" placeholder="Enter your Card Number">
             <input type="text" id="CVV" placeholder="Enter your CVV">
             <button class="next" id="confirmbtn">Confirm</button>
@@ -184,8 +184,9 @@
             data-this-movie-is="Intense, Violent, Futuristic"
             data-rating="4.3">
             <img src="../imgs/therunningman-min.png" alt="The Running Man">
-            <figcaption>The Running Man</figcaption>
-            <div class="showtimes">1:00pm • 3:00pm • 6:00pm • 9:00pm</div>
+            <button class="showShowTimes-btn">
+              Show ShowTimes
+            </button>
             </figure>
 
 
@@ -197,8 +198,9 @@
             data-this-movie-is="Gory, Suspenseful, Alien Hunt"
             data-rating="3.3">
             <img src="../imgs/predator badlands-min.png" alt="Predator: Badlands">
-            <figcaption>Predator: Badlands</figcaption>
-            <div class="showtimes">1:00pm • 3:00pm • 6:00pm • 9:00pm</div>
+            <button class="showShowTimes-btn">
+              Show ShowTimes
+            </button>
            </figure>
 
 
@@ -211,22 +213,24 @@
             data-this-movie-is="Emotional, Lebanese, Gritty"
             data-rating="4.1">
             <img src="../imgs/hardabsht-min.png" alt="HardaBasht poster">
-            <figcaption>HardaBasht</figcaption>
-            <div class="showtimes">1:00pm • 3:00pm • 6:00pm • 9:00pm</div>
+            <button class="showShowTimes-btn">
+              Show ShowTimes
+            </button>
              </figure>
 
 
 
           <figure class="movie-card" data-title="Jujutsu Kaisen:Execution"
-            data-description="A veil abruptly descends over the busy Shibuya area amid the bustling Halloween crowds, trapping countless civilians inside. Satoru Gojo, the strongest jujutsu sorcerer, steps into the chaos. But lying in wait are curse users and spirits scheming to seal him away. Yuji Itadori, accompanied by his classmates and other top-tier jujutsu sorcerers, enters the fray in an unprecedented clash of curses — the Shibuya Incident. In the aftermath, ten colonies across Japan are transformed into dens of curses in a plan orchestrated by Noritoshi Kamo, the most wicked sorcerer in history. As the deadly Culling Game starts, Special Grade sorcerer Yuta Okkotsu is assigned to carry out Yuji’s execution for his perceived crimes. The desperate confrontation between Satoru Gojo’s two beloved students comes to the big screen with an early preview. Be the first to experience Yuji and Yuta’s fateful battle with the hotly anticipated kickoff to Season 3 in theatres nationwide."
+            data-description="A veil abruptly descends over the busy Shibuya area amid the bustling Halloween crowds, trapping countless civilians inside. Satoru Gojo, steps into the chaos. But in wait curse users scheming to seal him away. Yuji Itadori and jujutsu sorcerers, enters the Shibuya Incident. Be the first to experience Yuji and Yuta’s fateful battle with the hotly anticipated kickoff to Season 3 in theatres nationwide."
             data-trailer-id="YOUR_TRAILER_ID_5"
             data-cast="Adam McArthur, Jun'ya Enoki, Yuchi Nakamura"
             data-genres="Action, Fantasy, Anime"
             data-this-movie-is="Exciting, Supernatural, Intense"
             data-rating="4.7">
             <img src="../imgs/jujutsu kaisen-min.png" alt="Jujutsu Kaisen:Execution poster">
-            <figcaption>Jujutsu Kaisen:Execution</figcaption>
-            <div class="showtimes">1:00pm • 3:00pm • 6:00pm • 9:00pm</div>
+            <button class="showShowTimes-btn">
+              Show ShowTimes
+            </button>
              </figure>
 
 
@@ -239,8 +243,9 @@
             data-this-movie-is="Funny, Suspenseful, Action-Packed"
             data-rating="4.2">
             <img src="../imgs/playdate-min.png" alt="Playdate poster">
-            <figcaption>Playdate</figcaption>
-            <div class="showtimes">1:00pm • 3:00pm • 6:00pm • 9:00pm</div>
+            <button class="showShowTimes-btn">
+              Show ShowTimes
+            </button>
             </figure>
 
 
@@ -252,8 +257,10 @@
             data-this-movie-is="Emotional, Romantic, Thought-Provoking"
             data-rating="2.3">
             <img src="../imgs/El Selem W El Thoban-min.png" alt="El Selem W El Thoban">
-            <figcaption>El Selem W El Thoban</figcaption>
-            <div class="showtimes">1:00pm • 3:00pm • 6:00pm • 9:00pm</div>
+            <button class="showShowTimes-btn">
+              Show ShowTimes
+            </button>
+
           </figure>
 
     </section>
@@ -276,6 +283,13 @@
         <p><strong>Genres:</strong> <span id="modal-genres"></span></p>
         <p><strong>This movie is:</strong> <span id="modal-this-movie-is"></span></p>
       </div>
+          <p style="color:blueviolet; margin-left: 20x;" class="movieshowtime"><strong>ShowTimes:</strong></p>
+        <div class="showtimes">
+          <span class="showtime-pill">1:00pm</span>
+          <span class="showtime-pill">3:00pm</span>
+          <span class="showtime-pill">6:00pm</span>
+          <span class="showtime-pill">9:00pm</span>
+        </div>
     </div>
 
     <div class="modal__body">
@@ -342,15 +356,27 @@
   </div>
 </footer>
 <script>
-  document.querySelectorAll(".movie-card").forEach(card => {
-    let rating = card.dataset.rating || "N/A";
+ document.querySelectorAll(".gallery2 .movie-card").forEach(card => {
+    const title = card.dataset.title 
+      || card.querySelector("figcaption")?.textContent.trim() 
+      || "";
+    const desc   = card.dataset.description || "";
+    const rating = card.dataset.rating || "N/A";
 
-    let overlay = document.createElement("span");
-    overlay.className = "rating-overlay booking-rating-overlay";
-    overlay.textContent = `${rating} / 5 ★`;
+    const overlay = document.createElement("div");
+    overlay.className = "movie-overlay";
+
+    overlay.innerHTML = `
+      <p class="movie-overlay-title">${title}</p>
+        <p class="movie-overlay-desc">${desc}</p>
+      <div class="movie-overlay-bottom">
+        <span class="film-overlay">Movie</span>
+        <span class="movie-overlay-rating">${rating} / 5 ★</span>
+      </div>
+    `;
 
     card.appendChild(overlay);
-});
+  });
 </script>
 </body>
 </html>
