edit about page some style

--- a/pages/about.html
+++ b/pages/about.html
@@ -35,18 +35,16 @@
     <div class="search">
       <!-- <input id="SearchInput" placeholder="Search movies, actors, genres..." /> -->
       <a href="../pages/search.html" class="search-icon" id="searchToggle">
-          <i class="fa-solid fa-magnifying-glass" aria-hidden="true"></i>
+      <i class="fa-solid fa-magnifying-glass" aria-hidden="true"></i>
       </a>
     </div>
     <div class="profile-icon">
       <a href="../pages/Profile.html"><i class="fa-solid fa-circle-user"></i></a>
     </div>
   </header>
-
-  <!-- Modern About Page Content -->
-  <section class="about-modern">
+<section class="about">
     <!-- Hero Section -->
-    <div class="about-hero-modern">
+    <div class="about-hero">
       <div class="hero-content">
         <h1>Explore. Rate. Book.</h1>
         <p class="tagline">Your gateway to cinematic adventures — anytime, anywhere</p>
@@ -114,39 +112,39 @@
 
     <!-- Stats Section -->
     <div class="stats-section">
-      <div class="stats-grid-modern">
-        <div class="stat-item-modern">
+      <div class="stats-grid">
+        <div class="stat-item">
           <span class="stat-number">100+</span>
           <span class="stat-label">Trailers Uploaded</span>
         </div>
-        <div class="stat-item-modern">
+        <div class="stat-item">
           <span class="stat-number">Millions</span>
           <span class="stat-label">Ratings Submitted</span>
         </div>
-        <div class="stat-item-modern">
+        <div class="stat-item">
           <span class="stat-number">Global</span>
           <span class="stat-label">Booking Partners</span>
         </div>
-        <div class="stat-item-modern">
+        <div class="stat-item">
           <span class="stat-number">95%</span>
           <span class="stat-label">User Satisfaction</span>
         </div>
       </div>
     </div>
 
-    <section class="about-section-modern">
-      <div class="about-block-modern">
-        <img src="../imgs/badge.png" alt="Achievements Icon" class="about-icon-modern">
+    <section class="about-section">
+      <div class="about-block">
+        <img src="../imgs/badge.png" alt="Achievements Icon" class="about-icon">
         <h3>Achievements</h3>
         <p>We've enabled thousands of bookings, hosted hundreds of trailers, and built a thriving rating community.</p>
       </div>
-      <div class="about-block-modern">
-        <img src="../imgs/shared-vision.png" alt="Vision Icon" class="about-icon-modern">
+      <div class="about-block">
+        <img src="../imgs/shared-vision.png" alt="Vision Icon" class="about-icon">
         <h3>Vision</h3>
         <p>To be the go-to platform for discovering, rating, and booking movies — with trailers at your fingertips.</p>
       </div>
-      <div class="about-block-modern">
-        <img src="../imgs/mission.png" alt="Mission Icon" class="about-icon-modern">
+      <div class="about-block">
+        <img src="../imgs/mission.png" alt="Mission Icon" class="about-icon">
         <h3>Mission</h3>
         <p>Empower movie lovers to explore, evaluate, and enjoy cinema through seamless booking and personalized watchlists.</p>
       </div>
@@ -155,7 +153,7 @@
     <div class="cta-section">
       <div class="cta-content">
         <h2>Ready to Book or Browse?</h2>
-        <p>Watch trailers, rate movies, and build your watchlist — all in one place.</p>
+        <p class="tagline">Watch trailers, rate movies, and build your watchlist — all in one place.</p>
         <div class="cta-buttons">
           <a href="../index.html" class="btn-primary">Start Watching</a>
           <a href="../pages/bookings.html" class="btn-secondary">Book Tickets</a>
