push the rest of the files

--- a/pages/trivia.html
+++ b/pages/trivia.html
@@ -97,6 +97,14 @@
           <p>Guess movies from scene descriptions</p>
           <button class="play-btn" onclick="startScenesGame()">Play Now</button>
         </div>
+
+        <!-- Game 5: Coming Soon -->
+<div class="game-card" data-game="coming-soon">
+  <div class="game-icon">🚀</div>
+  <h3>More Games</h3>
+  <p>Exciting new games are in development. Stay tuned!</p>
+  <button class="play-btn" disabled>Coming Soon</button>
+</div>
       </div>
 
       <!-- Leaderboard Section -->
