fix the z-index

--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta http-equiv="Permissions-Policy" content="autoplay=(self),encrypted-media=(self)">
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ReelTime - Discover, Rate & Watch</title>
   <link rel="shortcut icon" href="imgs/movie.png" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -13,8 +11,7 @@
   <script src="js/script.js" defer></script>
   <script src="js/scriptJQ.js" defer></script>
  <script src="js/watchlist.js" defer></script>
-  <!-- for search icon-->
-  
+ 
 </head>
 
 <body>
