--- a/pages/about.html
+++ b/pages/about.html
@@ -1,13 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="Permissions-Policy" content="autoplay=(self),encrypted-media=(self)">
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Us</title>
   <link rel="shortcut icon" href="../imgs/movie.png" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link rel="stylesheet" href="../css/styles.css">
+  <link rel="stylesheet" href="../css/about.css">
+
   <script src="../js/script.js" defer></script>
 </head>
 <body>
@@ -33,7 +34,7 @@
 
     <div class="search">
       <!-- <input id="SearchInput" placeholder="Search movies, actors, genres..." /> -->
-      <a href="../pages/search.html" class="search-icon" id="searchToggle">
+      <!-- <a href="../pages/search.html" class="search-icon" id="searchToggle"> -->
       <i class="fa-solid fa-magnifying-glass" aria-hidden="true"></i>
       </a>
     </div>
