--- a/pages/about.html
+++ b/pages/about.html
@@ -6,8 +6,9 @@
   <title>About Us</title>
   <link rel="shortcut icon" href="../imgs/movie.png" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-  <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="../css/about.css">
+  <link rel="stylesheet" href="../css/styles.css">
+  
 
   <script src="../js/script.js" defer></script>
 </head>
@@ -34,7 +35,7 @@
 
     <div class="search">
       <!-- <input id="SearchInput" placeholder="Search movies, actors, genres..." /> -->
-      <!-- <a href="../pages/search.html" class="search-icon" id="searchToggle"> -->
+      <a href="../pages/search.html" class="search-icon" id="searchToggle">
       <i class="fa-solid fa-magnifying-glass" aria-hidden="true"></i>
       </a>
     </div>
