--- a/pages/search.html
+++ b/pages/search.html
@@ -39,7 +39,7 @@
         </div>
 
         <div class="search">
-        <a href="pages/search.html" class="search-icon" id="searchToggle">
+        <a href="../pages/search.html" class="search-icon" id="searchToggle">
             <i class="fa-solid fa-magnifying-glass" style="color: blueviolet;" aria-hidden="true"></i>
         </a>
         </div>
