edit some padding

--- a/pages/Profile.html
+++ b/pages/Profile.html
@@ -63,7 +63,6 @@
 <main>
     <div id="watchlist-container" class="gallery"></div>
     
-    <!-- Add this Rated Movies Section -->
     <div class="rated-section">
         <div class="section-header">
             <div class="section-title">My Rated Movies</div>
@@ -71,7 +70,7 @@
         </div>
         <div class="rated" id="rated"></div>
     </div>
-    <!-- Booked Section -->
+    
     <div class="booked-section">
       <div class="section-header">
         <div class="section-title">My Booked Movies</div>
@@ -122,7 +121,7 @@
   </div>
   
   <div class="footer-credits">
-    <p>Made with ❤️ for movie lovers</p>
+    <p>Made with <i class="fas fa-heart"></i> for movie lovers</p>
     <p>&copy; 2024 ReelTime Cinemas</p>
   </div>
 </footer>
