--- a/pages/about.html
+++ b/pages/about.html
@@ -104,7 +104,7 @@
           <p>Watch trailers before you commit — preview the vibe, then book or add to your list.</p>
         </div>
         <div class="value-card">
-          <div class="value-icon">❤️</div>
+          <div class="value-icon"><i class="fas fa-heart"></i></div>
           <h3>Rate & Remember</h3>
           <p>Leave your mark with ratings and reviews, and build a watchlist that reflects your taste.</p>
         </div>
@@ -202,7 +202,7 @@
     </div>
     
     <div class="footer-credits">
-      <p>Made with ❤️ for movie lovers</p>
+      <p>Made with <i class="fas fa-heart"></i> for movie lovers</p>
       <p>&copy; 2024 ReelTime Cinemas</p>
     </div>
   </footer>
