--- a/pages/bookings.html
+++ b/pages/bookings.html
@@ -357,7 +357,7 @@
   </div>
   
   <div class="footer-credits">
-    <p>Made with ❤️ for movie lovers</p>
+    <p>Made with <i class="fas fa-heart"></i> for movie lovers</p>
     <p>&copy; 2024 ReelTime Cinemas</p>
   </div>
 </footer>
