--- a/pages/about.html
+++ b/pages/about.html
@@ -104,7 +104,7 @@
           <p>Watch trailers before you commit — preview the vibe, then book or add to your list.</p>
         </div>
         <div class="value-card">
-          <div class="value-icon"><i class="fas fa-heart"></i></div>
+          <div class="value-icon">❤️</div>
           <h3>Rate & Remember</h3>
           <p>Leave your mark with ratings and reviews, and build a watchlist that reflects your taste.</p>
         </div>
