style for icons

--- a/pages/trivia.html
+++ b/pages/trivia.html
@@ -56,10 +56,10 @@
     <!-- Login Required Message  -->
     <div id="loginRequired" class="login-required" style="display: none;">
       <div class="notlogin">
-        <div class="empty-icon">🎮</div>
+        <div class="empty-icon"><i class="fas fa-gamepad style #8a2be2" ></i></div>
         <h3>Please Log In</h3>
         <p>You need to be logged in to play movie games and track your scores.</p>
-        <a href="../index.html" style="color: #8a2be2; text-decoration: none; font-weight: bold;">Go to Login →</a>
+        <a href="../index.html" style="color: #8a2be2; text-decoration: none; font-weight: bold;">Go to Login <i class="fas fa-arrow-right #8a2be2"></i></a>
       </div>
     </div>
 
@@ -68,7 +68,7 @@
       <div class="games-grid">
         <!-- Game 1: Emojis -->
         <div class="game-card" data-game="guess">
-          <div class="game-icon">🎭</div>
+          <div class="game-icon"><i class="fas fa-theater-masks" style="color: #ffd700;"></i></div>
           <h3>Emoji Challenge</h3>
           <p>Guess movies from emoji combinations</p>
           <button class="play-btn" onclick="startGuessGame()">Play Now</button>
@@ -76,7 +76,7 @@
 
         <!-- Game 2: Characters -->
         <div class="game-card" data-game="character">
-          <div class="game-icon">👥</div>
+          <div class="game-icon"><i class="fas fa-users" style="color:#4285f4 ;"></i></div>
           <h3>Character Match</h3>
           <p>Match characters to their movies</p>
           <button class="play-btn" onclick="startCharacterGame()">Play Now</button>
@@ -84,7 +84,7 @@
 
         <!-- Game 3: Quotes -->
         <div class="game-card" data-game="quotes">
-          <div class="game-icon">💬</div>
+          <div class="game-icon"><i class="fas fa-quote-right" style="color: #34a853 ;"></i></div>
           <h3>Movie Quotes</h3>
           <p>Identify movies from famous quotes</p>
           <button class="play-btn" onclick="startQuotesGame()">Play Now</button>
@@ -92,7 +92,7 @@
 
         <!-- Game 4: Scenes -->
         <div class="game-card" data-game="scenes">
-          <div class="game-icon">🎬</div>
+          <div class="game-icon"><i class="fas fa-film #ea4335"></i></div>
           <h3>Movie Scenes</h3>
           <p>Guess movies from scene descriptions</p>
           <button class="play-btn" onclick="startScenesGame()">Play Now</button>
@@ -100,7 +100,7 @@
 
         <!-- Game 5: Coming Soon -->
 <div class="game-card" data-game="coming-soon">
-  <div class="game-icon">🚀</div>
+  <div class="game-icon"><i class="fas fa-rocket " style="color: #ff6b35;" ></i></div>
   <h3>More Games</h3>
   <p>Exciting new games are in development. Stay tuned!</p>
   <button class="play-btn" disabled>Coming Soon</button>
@@ -165,7 +165,7 @@
     </div>
     
     <div class="footer-credits">
-      <p>Made with <i class="fas fa-heart"></i> for movie lovers</p>
+      <p>Made with <i class="fas fa-heart" style="color: #e91e63;"></i> for movie lovers</p>
       <p>&copy; 2024 ReelTime Cinemas</p>
     </div>
   </footer>
