--- a/pages/about.html
+++ b/pages/about.html
@@ -94,17 +94,18 @@
       </div>
       <div class="values-grid">
         <div class="value-card">
-          <div class="value-icon">🎯</div>
+          <div class="value-icon"><i class="fas fa-bullseye" style="color: #ffd700; font-size: 60px; margin: 15px;"></i></div>
           <h3>Smart Booking</h3>
           <p>Reserve your seats instantly with real-time availability and location-based options.</p>
         </div>
         <div class="value-card">
-          <div class="value-icon">⚡</div>
+          <div class="value-icon"><i class="fas fa-bolt" style="color: #ff6b35; font-size: 60px; margin: 15px;"></i>
+</div>
           <h3>Trailer First</h3>
           <p>Watch trailers before you commit — preview the vibe, then book or add to your list.</p>
         </div>
         <div class="value-card">
-          <div class="value-icon">❤️</div>
+          <div class="value-icon"><i class="fas fa-heart" style="color: #e91e63; font-size: 60px; margin: 15px;"></i></div>
           <h3>Rate & Remember</h3>
           <p>Leave your mark with ratings and reviews, and build a watchlist that reflects your taste.</p>
         </div>
